# SockTalk-Linux

./: .gitignore  CMakeLists.txt  LICENSE  README.md  manifest.json.in  socktalkclient.desktop.in
plugins/: CMakeLists.txt
plugins/SockTalkFrontend/: CMakeLists.txt  client.cpp  client.h  clientwrapper.cpp  clientwrapper.h  plugin.cpp  plugin.h  qmldir  socktalkfrontend.cpp  socktalkfrontend.h
plugins/SockTalkFrontend/lib/: acceptthread.h  exitcodes.h  messagehandler.h  msgthread.h  socktalkclient.h  socktalkclienthandler.h  socktalkserver.h
plugins/Socktalkfrontend/: plugin.cpp  plugin.h  qmldir  socktalkfrontend.cpp  socktalkfrontend.h
po/: socktalkclient.arc676.pot
qml/: AboutView.qml  ChatView.qml  DefaultHeader.qml  Main.qml
